--- a/resources/styles/src/components/organisms/_o-marketingBlocks.scss
+++ b/resources/styles/src/components/organisms/_o-marketingBlocks.scss
@@ -30,5 +30,10 @@
     &:last-child {
       border-right: none;
     }
+
+    @media(max-width: 500px) {
+      border-right: none;
+      width: 100%;
+    }
   }
 }
