--- a/resources/styles/src/components/molecules/_m-capabilitiesBlock.scss
+++ b/resources/styles/src/components/molecules/_m-capabilitiesBlock.scss
@@ -17,6 +17,17 @@
     flex: 0 1 100%;
     padding: 0px 4rem;
 
+    .m-capabilitiesBlock__headline {
+
+      @media(max-width: 800px) {
+        margin: 1rem 0;
+      }
+    }
+
+    @media(max-width: 600px) {
+      padding: 0px 1rem;
+    }
+
     ul {
       margin: 0 auto;
     }
