--- a/resources/styles/src/components/molecules/_m-contactLinkBlock.scss
+++ b/resources/styles/src/components/molecules/_m-contactLinkBlock.scss
@@ -1,4 +1,25 @@
 .m-contactLinkBlock {
   display: flex;
   position: relative;
+
+  &:after {
+    content: '\A';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: rgba(1,0,102,0.5);
+    opacity: 0;
+    transition: all 1s;
+    -webkit-transition: all 1s;
+    z-index: 1;
+  }
+
+  &:hover {
+
+    &:after {
+      opacity: 1;
+    }
+  }
 }
