--- a/resources/styles/src/components/molecules/_m-industrySlider.scss
+++ b/resources/styles/src/components/molecules/_m-industrySlider.scss
@@ -17,6 +17,10 @@
       width: 60%;
     }
 
+    @media(max-width: 500px) {
+      width: 90%;
+    }
+
     .m-industrySlider__title {
       background-color: rgba(0,0,0,.8);
       color: $white;
