--- a/resources/styles/src/components/molecules/_m-productGrid.scss
+++ b/resources/styles/src/components/molecules/_m-productGrid.scss
@@ -14,12 +14,10 @@
     bottom: 0px;
     color: $white;
     display: flex;
-    flex-direction: column;
     font-size: 1.5rem;
-    height: 15%;
     line-height: 2rem;
     margin: 0px;
-    padding: 0px;
+    padding: 5px 0px;
     position: absolute;
     width: 100%;
 
@@ -28,7 +26,9 @@
     }
 
     .m-productGrid__arrow {
-      align-self: flex-end;
+      align-self: flex-start;
+      margin-right: 3rem;
+      margin-top: -5px;
       width: 1.5rem;
     }
   }
