--- a/resources/styles/src/components/organisms/_o-capabilitiesBlock.scss
+++ b/resources/styles/src/components/organisms/_o-capabilitiesBlock.scss
@@ -14,6 +14,10 @@
   .o-capabilitiesBlock__topDecoration {
     flex: 0 0 25px;
     margin: 0 -40px 0 40px;
+
+    @media(max-width: 600px) {
+      margin: 0px;
+    }
   }
 }
 
@@ -26,15 +30,18 @@
   background: linear-gradient(135deg, rgba(0,0,0,.8), rgba(0,0,152,.8), rgba(0,0,0,.8));
   padding: 0rem 0rem 2rem;
   position: absolute;
-  right: 1rem;
+  right: 8px;
   top: 1rem;
   width: 50%;
 
-  @media(max-width: 768px) {
+  @media(max-width: 900px) {
     width: 70%;
   }
 
   @media(max-width: 600px) {
+    right: 0px;
+    padding: 0rem;
+    top: 0rem;
     width: 100%;
   }
 
