--- a/resources/styles/src/components/organisms/_o-capabilityStack.scss
+++ b/resources/styles/src/components/organisms/_o-capabilityStack.scss
@@ -5,14 +5,17 @@
   width: 100%;
 
   .o-capabilityStack__headline {
-    display: flex;
-    flex: 0 1 100%;
-    justify-content: center;
     align-items: center;
+    display: flex;
+    justify-content: center;
 
     .o-capabilityStack__topDecoration {
       flex: 0 0 25px;
       margin: 0 -40px 0 40px;
+
+      @media(max-width: 600px) {
+        margin: 0px;
+      }
     }
   }
 
