--- a/resources/styles/src/components/organisms/_o-productGrid.scss
+++ b/resources/styles/src/components/organisms/_o-productGrid.scss
@@ -7,6 +7,10 @@
   .o-productGrid__topDecoration {
     flex: 0 0 25px;
     margin: 0 -40px 0 40px;
+
+    @media(max-width: 600px) {
+      margin: 0px;
+    }
   }
 }
 
@@ -27,16 +31,34 @@
     flex: 0 1 33.33%;
     line-height: 0px;
     overflow: hidden;
+    position: relative;
 
-    @media(max-width: 600px) {
+    &:after {
+      content: '\A';
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      background: rgba(1,0,102,0.5);
+      opacity: 0;
+      transition: all 1s;
+      -webkit-transition: all 1s;
+      z-index: 1;
+    }
+
+    &:hover {
+
+      &:after {
+        opacity: 1;
+      }
+    }
+
+    @media(max-width: 800px) {
       flex: 0 1 50%;
     }
 
     @media(max-width: 600px) {
-      flex: 0 1 50%;
-    }
-
-    @media(max-width: 400px) {
       flex: 0 1 100%;
     }
 
