--- a/resources/styles/src/components/organisms/_o-sidebar.scss
+++ b/resources/styles/src/components/organisms/_o-sidebar.scss
@@ -6,6 +6,8 @@
   justify-content: center;
   margin: 0 auto;
   flex: 0 1 100%;
+  width: 100%;
+
   .o-sidebar__widget {
     align-items: center;
     display: flex;
@@ -41,11 +43,17 @@
       flex-wrap: wrap;
       padding: 0 3rem;
 
+      @media(max-width: 600px) {
+        flex: 0 1 100%;
+        padding: 0rem;
+      }
+
       .o-sidebar__list {
         flex: 0 1 100%;
         list-style: none;
         margin: 0 auto;
         padding: 0;
+        width: 100%;
       }
     }
   }
@@ -56,6 +64,7 @@
   margin: 0 auto;
   padding: 0px;
   flex: 0 1 100%;
+  width: 100%;
 
   .o-sidebar__item {
     padding-bottom: 10px;
