--- a/resources/styles/src/components/organisms/_o-supplementaryContent.scss
+++ b/resources/styles/src/components/organisms/_o-supplementaryContent.scss
@@ -4,7 +4,7 @@
   flex-direction: column;
   justify-content: center;
   margin: 0 auto;
-  width: 95%;
+  width: 90%;
 
   @media(min-width: 640px) {
     width: 90%;
@@ -20,6 +20,10 @@
     .o-supplementaryContent__topDecoration {
       flex: 0 0 25px;
       margin: 0 -40px 0 40px;
+
+      @media(max-width: 600px) {
+        margin: 0px;
+      }
     }
   }
 
