--- a/resources/styles/src/components/organisms/_o-videoContent.scss
+++ b/resources/styles/src/components/organisms/_o-videoContent.scss
@@ -14,6 +14,10 @@
     .o-videoContent__topDecoration {
       flex: 0 0 25px;
       margin: 0 -40px 0 40px;
+
+      @media(max-width: 600px) {
+        margin: 0px;
+      }
     }
   }
 
