--- a/resources/styles/src/components/pages/_homepage.scss
+++ b/resources/styles/src/components/pages/_homepage.scss
@@ -11,11 +11,17 @@
       flex: 0 1 100%;
       justify-content: center;
       align-items: center;
+
       .m-industrySlider__topDecoration {
         flex: 0 0 25px;
         margin: 0 -40px 0 40px;
+
         path {
           width: 100%;
+        }
+
+        @media(max-width: 600px) {
+          margin: 0px;
         }
       }
     }
@@ -37,6 +43,10 @@
   padding: 0 15px !important;
   width: 40px !important;
   z-index: 1;
+
+  @media(max-width: 600px) {
+    display: none !important;
+  }
 }
 
 .slick-prev {
