--- a/resources/styles/src/components/molecules/_m-articlePreview.scss
+++ b/resources/styles/src/components/molecules/_m-articlePreview.scss
@@ -1,11 +1,45 @@
 .m-articlePreview {
+
   a {
+    display: block;
+    padding: 0 0 20px;
+    position: relative;
+
+    &:after {
+      content: '\A';
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      background: rgba(1,0,102,0.5);
+      opacity: 0;
+      transition: all 1s;
+      -webkit-transition: all 1s;
+      z-index: 1;
+    }
+
+    &:hover {
+
+      &:after {
+        opacity: 1;
+      }
+    }
+
+    .m-articlePreview__title {
+      margin: 10px 0px;
+      padding: 0 5%;
+    }
+
     .m-articlePreview__date {
       color: #333;
+      padding: 0 5%;
+      margin: 5px 0px;
     }
 
     p {
       color: #333;
+      padding: 0 5%;
     }
   }
 }
