--- a/resources/styles/src/components/pages/_newsCategory.scss
+++ b/resources/styles/src/components/pages/_newsCategory.scss
@@ -2,6 +2,10 @@
   margin: 0 auto;
   max-width: 1300px;
   padding-top: 1rem;
+
+  @media(max-width: 600px) {
+    display: none;
+  }
 }
 
 .newsCategory__intro {
