--- a/resources/styles/src/components/organisms/_o-supplementaryContent.scss
+++ b/resources/styles/src/components/organisms/_o-supplementaryContent.scss
@@ -16,6 +16,7 @@
     flex: 0 1 100%;
     justify-content: center;
     margin: 0;
+    padding: 0px;
 
     .o-supplementaryContent__topDecoration {
       flex: 0 0 25px;
