--- a/resources/styles/src/components/organisms/_o-sidebar.scss
+++ b/resources/styles/src/components/organisms/_o-sidebar.scss
@@ -37,6 +37,7 @@
     width: 95%;
 
     .o-sidebar__widget {
+      align-items: flex-start;
       display: flex;
       flex: 0 1 40%;
       flex-direction: row;
@@ -77,6 +78,24 @@
         background-color: $blue;
         color: $white;
       }
+    }
+  }
+}
+
+.newsLanding__newsSidebar {
+
+  .o-sidebar {
+    align-items: flex-start;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 0 auto;
+    max-width: 1300px;
+    width: 95%;
+
+    .o-sidebar__widget {
+      flex: 0 1 40%;
     }
   }
 }
