--- a/resources/styles/src/index.scss
+++ b/resources/styles/src/index.scss
@@ -152,6 +152,7 @@
 @import './components/pages/generalLanding';
 @import './components/pages/homepage';
 @import './components/pages/newsCategory';
+@import './components/pages/newsLanding';
 @import './components/pages/solutionLanding';
 
 
