turn off infinte scroll

--- a/resources/styles/src/components/organisms/_o-featureSlider.scss
+++ b/resources/styles/src/components/organisms/_o-featureSlider.scss
@@ -5,3 +5,10 @@
 .slick-slide {
   line-height: 0px;
 }
+
+.slick-slide,
+.slick-slider .slick-track,
+.slick-slider .slick-list
+{
+  transition-delay: 300ms;
+}
