history, intro content and overall general edits

--- a/resources/styles/src/components/organisms/_o-introContent.scss
+++ b/resources/styles/src/components/organisms/_o-introContent.scss
@@ -32,7 +32,7 @@
   }
 
   .o-introContent__content {
-    color: $light-blue;
+    color: $blue;
     text-align: center;
 
     .o-introContent__title {
