--- a/resources/styles/src/index.scss
+++ b/resources/styles/src/index.scss
@@ -150,6 +150,7 @@
 @import './components/pages/categoryContact';
 @import './components/pages/categoryLanding';
 @import './components/pages/generalLanding';
+@import './components/pages/history';
 @import './components/pages/homepage';
 @import './components/pages/newsCategory';
 @import './components/pages/newsLanding';
