case study removal and general edits

--- a/resources/styles/src/components/organisms/_o-callToAction.scss
+++ b/resources/styles/src/components/organisms/_o-callToAction.scss
@@ -35,6 +35,12 @@
 
     p {
       margin: 0px;
+      line-height: 2.5rem;
+    }
+
+    span {
+      display: block;
+      padding: .6rem;
     }
   }
 
