--- a/resources/styles/src/elements/_content-sectioning.scss
+++ b/resources/styles/src/elements/_content-sectioning.scss
@@ -23,11 +23,12 @@ section {
   width: 100%;
 }
 h1.o-introContent__title {
-  color: $light-blue;
-  font-size: 5.6rem;
+  color: $blue;
+  font-size: 5.4rem;
   line-height: 5rem;
   margin: 0px;
   text-transform: uppercase;
+  padding-bottom: 1rem;
 
   @media(max-width: 900px) {
     font-size: 5rem;
@@ -55,7 +56,7 @@ h1.o-introContent__title {
   color: $blue;
   font-size: 4.6rem;
   font-weight: $font-bold;
-  line-height: 3.8rem;
+  line-height: 4.2rem;
   margin: 0 auto;
   max-width: 800px;
   padding: 4rem 0rem 2rem;
@@ -112,6 +113,7 @@ h1.o-introContent__title {
   font-size: 2rem;
   font-weight: $font-bold;
   line-height: 2rem;
+  margin: 1rem 0 1rem;
  }
 
  h3.m-footerLink__title,
