--- a/resources/styles/src/elements/_content-sectioning.scss
+++ b/resources/styles/src/elements/_content-sectioning.scss
@@ -113,7 +113,7 @@ h1.o-introContent__title {
   font-size: 2rem;
   font-weight: $font-bold;
   line-height: 2rem;
-  margin: 1rem 0 1rem;
+  margin: 1rem 0;
  }
 
  h3.m-footerLink__title,
