--- a/resources/styles/src/index.scss
+++ b/resources/styles/src/index.scss
@@ -170,3 +170,6 @@
 @import './vendor/lazysizes';
 // WordPress editor styles
 @import './vendor/wp-core';
+
+// pushbar mobile nav
+@import './vendor/pushbar';
