--- a/resources/styles/src/components/molecules/_m-productGrid.scss
+++ b/resources/styles/src/components/molecules/_m-productGrid.scss
@@ -13,7 +13,7 @@
     background-color: $black-80;
     bottom: 0px;
     color: $white;
-    display: flex;
+    display: none;
     font-size: 1.5rem;
     line-height: 2rem;
     margin: 0px;
