--- a/resources/styles/src/components/organisms/_o-navigationMenu.scss
+++ b/resources/styles/src/components/organisms/_o-navigationMenu.scss
@@ -14,7 +14,7 @@
   z-index: 4;
 
   @media(max-width: 768px) {
-    height: 60px;
+    height: 45px;
     position: relative;
     width: 100%;
   }
@@ -36,7 +36,7 @@
       transition: all 0.5s ease-in;
 
       @media(max-width: 768px) {
-        max-width: 200px;
+        max-width: 170px;
       }
     }
   }
@@ -53,9 +53,16 @@
 
   .o-navigationMenu__topRow {
     background-color: $grey;
+
+    @media(max-width: 768px) {
+      height: 45px;
+    }
   }
   .o-navigationMenu__bottomRow {
 
+    @media(max-width: 768px) {
+      display: none;
+    }
     ul {
       @media(max-width: 768px) {
         display: none;
@@ -129,16 +136,46 @@
 }
 .o-navigationMenu__bottomRow--mobile{
   > ul > li{
-    flex-direction: column;
     height: 2rem;
+    display: flex;
+    flex-wrap: wrap;
+
+    a {
+      padding: .7rem 1rem !important;
+      flex: 0 1 auto;
+      width: 90%;
+      order: 1;
+    }
+
+    .m-drawerMenu__toggle {
+      flex: 0 1 auto;
+      width: 10%;
+      text-align: center;
+      order: 2;
+    }
 
     ul.sub-menu{
       display: none;
+    }
+
+    .m-drawerMenu__sub {
+      padding: 0px;
+      flex: 0 1 auto;
+      width: 100%;
+      order: 3;
+
+      li {
+        a{
+          display: block;
+          width: 100%;
+        }
+      }
     }
   }
 
   .m-navigationRow{
     display: block;
+    padding: 0px;
   }
 }
 
@@ -152,5 +189,15 @@
 
   @media(max-width: 768px) {
     display: block;
+    height: 45px;
+    width: 45px;
   }
+}
+
+#wpadminbar {
+  display: none !important;
+}
+
+html {
+  margin-top: 0px !important;
 }
