--- a/resources/styles/src/components/molecules/_m-capabilityBlock.scss
+++ b/resources/styles/src/components/molecules/_m-capabilityBlock.scss
@@ -4,6 +4,7 @@
   flex-direction: column-reverse;
   justify-content: center;
   width: 100%;
+  flex: 0 1 auto;
 
   &.m-capabilityBlock--reverse {
     flex-direction: column;
@@ -20,6 +21,8 @@
   .m-capabilityBlock__description {
     color: #333;
     margin: 2rem;
+    width: 100%;
+    flex: 0 1 auto;
 
     @media(max-width: 640px) {
       margin: 1rem 2rem 2rem;
