--- a/resources/styles/src/components/organisms/_o-featuredImage.scss
+++ b/resources/styles/src/components/organisms/_o-featuredImage.scss
@@ -27,7 +27,7 @@
     }
 
     @media(max-width: 600px) {
-      background: linear-gradient(135deg,rgba(0,0,152,1),rgba(0,0,152,1));
+      background: #010066;
       bottom: 0px;
       flex: 0 1 100%;
       right: 0px;
