--- a/resources/styles/src/components/molecules/_m-capabilityBlock.scss
+++ b/resources/styles/src/components/molecules/_m-capabilityBlock.scss
@@ -25,7 +25,8 @@
     flex: 0 1 auto;
 
     @media(max-width: 640px) {
-      margin: 1rem 2rem 2rem;
+      margin: 1rem 2rem 0rem;
+      padding: 0 5%;
     }
   }
 
@@ -69,7 +70,6 @@
 
     .m-capabilityBlock__image {
       position: relative;
-      width: calc(100% - 3.2rem);
       z-index: 1;
 
       @media(max-width: 640px) {
