--- a/resources/styles/src/components/molecules/_m-footerContact.scss
+++ b/resources/styles/src/components/molecules/_m-footerContact.scss
@@ -9,6 +9,7 @@
   @media(max-width: 600px) {
     flex-direction: column;
     justify-content: center;
+    padding: 1rem 0;
     text-align: center;
   }
 
