--- a/resources/styles/src/components/molecules/_m-footerLink.scss
+++ b/resources/styles/src/components/molecules/_m-footerLink.scss
@@ -31,6 +31,14 @@
     flex-wrap: wrap;
     justify-content: flex-start;
 
+    @media(max-width: 800px) {
+      padding-bottom: 1rem;
+    }
+
+    @media(max-width: 640px) {
+      padding-top: 1rem;
+    }
+
     &:after {
       content: none;
     }
