--- a/resources/styles/src/components/molecules/_m-industrySlider.scss
+++ b/resources/styles/src/components/molecules/_m-industrySlider.scss
@@ -17,8 +17,9 @@
       width: 60%;
     }
 
-    @media(max-width: 500px) {
-      width: 90%;
+    @media(max-width: 700px) {
+      position: relative;
+      width: 100%;
     }
 
     .m-industrySlider__title {
