--- a/resources/styles/src/components/molecules/_m-productGrid.scss
+++ b/resources/styles/src/components/molecules/_m-productGrid.scss
@@ -6,6 +6,10 @@
     transition: .5s ease-in-out;
     z-index: 1;
     width: 93%;
+
+    @media(max-width: 640px) {
+      width: 100%;
+    }
   }
 
   .m-productGrid__title {
