--- a/resources/styles/src/components/organisms/_o-footerContent.scss
+++ b/resources/styles/src/components/organisms/_o-footerContent.scss
@@ -14,6 +14,10 @@
     flex-wrap: wrap;
   }
 
+  @media(max-width: 640px) {
+    margin-top: .5rem;
+  }
+
   .o-footerContent__mainContainer {
     display: flex;
     flex-wrap: nowrap;
