--- a/resources/styles/src/components/organisms/_o-footerLinks.scss
+++ b/resources/styles/src/components/organisms/_o-footerLinks.scss
@@ -23,6 +23,10 @@
       }
     }
 
+    @media(max-width: 640px) {
+     padding-top: .5rem;
+    }
+
     @media(max-width: 600px) {
 
       &:first-of-type {
@@ -36,6 +40,10 @@
       display: flex;
       justify-content: center;
       margin-top: 1rem;
+
+      @media(max-width: 640px) {
+        margin-top: .5rem;
+      }
     }
   }
 }
