--- a/resources/styles/src/components/organisms/_o-supplementaryContent.scss
+++ b/resources/styles/src/components/organisms/_o-supplementaryContent.scss
@@ -17,6 +17,10 @@
     justify-content: center;
     margin: 0;
 
+    @media(max-width: 640px) {
+      padding: 1rem 0 0rem;
+    }
+
     .o-supplementaryContent__topDecoration {
       flex: 0 0 25px;
       margin: 0 -40px 0 40px;
