--- a/resources/styles/src/components/pages/_categoryLanding.scss
+++ b/resources/styles/src/components/pages/_categoryLanding.scss
@@ -8,7 +8,11 @@
     }
 
     @media(max-width: 768px) {
-      padding-top: 1.5rem;
+      padding-top: 5rem;
+    }
+
+    @media(max-width: 600px) {
+      padding-top: 7rem;
     }
   }
 }
