--- a/resources/styles/src/components/pages/_generalLanding.scss
+++ b/resources/styles/src/components/pages/_generalLanding.scss
@@ -15,7 +15,11 @@
     }
 
     @media(max-width: 768px) {
-      padding-top: 1.5rem;
+      padding-top: 5rem;
+    }
+
+    @media(max-width: 600px) {
+      padding-top: 7rem;
     }
   }
 
