--- a/resources/styles/src/components/pages/_history.scss
+++ b/resources/styles/src/components/pages/_history.scss
@@ -1,6 +1,18 @@
 .page-template-template-history {
   .o-introContent {
     padding-top: 8rem;
+
+    @media(max-width: 800px) {
+      padding-top: 8rem;
+    }
+
+    @media(max-width: 768px) {
+      padding-top: 5rem;
+    }
+
+    @media(max-width: 600px) {
+      padding-top: 7rem;
+    }
   }
 }
 
