--- a/resources/styles/src/components/pages/_homepage.scss
+++ b/resources/styles/src/components/pages/_homepage.scss
@@ -8,9 +8,13 @@
 
     h2 {
       display: flex;
-      flex: 0 1 100%;
+      flex: 0 1 95%;
       justify-content: center;
       align-items: center;
+
+      @media(max-width: 700px) {
+        padding: 3rem 0 0;
+      }
 
       .m-industrySlider__topDecoration {
         flex: 0 0 25px;
@@ -51,10 +55,20 @@
 
 .slick-prev {
   left: 8px !important;
+
+  @media(max-width: 768px) {
+    left: 0px !important;
+    bottom: 0px !important;
+  }
 }
 
 .slick-next {
   right: 8px !important;
+
+  @media(max-width: 768px) {
+    right: 0px !important;
+    bottom: 0px !important;
+  }
 }
 
 #marketingBlocks {
