--- a/resources/styles/src/components/pages/_solutionLanding.scss
+++ b/resources/styles/src/components/pages/_solutionLanding.scss
@@ -6,7 +6,11 @@
   }
 
   @media(max-width: 768px) {
-    padding-top: 2rem;
+    padding-top: 5rem;
+  }
+
+  @media(max-width: 600px) {
+    padding-top: 7rem;
   }
 }
 
@@ -25,6 +29,10 @@
   margin: 0 auto 2rem;
   max-width: 1000px;
   width: 95%;
+
+  @media(max-width: 640px) {
+    width: 100%;
+  }
 }
 
 .solutionLanding__bodyContent {
