--- a/resources/styles/src/index.scss
+++ b/resources/styles/src/index.scss
@@ -154,6 +154,7 @@
 @import './components/pages/homepage';
 @import './components/pages/newsCategory';
 @import './components/pages/newsLanding';
+@import './components/pages/searchLanding';
 @import './components/pages/solutionLanding';
 
 
