--- a/resources/styles/src/components/organisms/_o-introContent.scss
+++ b/resources/styles/src/components/organisms/_o-introContent.scss
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: center;
   padding-bottom: 1rem;
+  max-width: 1300px;
   width: 90%;
 
   @media(max-width: 600px) {
@@ -37,6 +38,7 @@
   .o-introContent__content {
     color: $blue;
     text-align: center;
+    flex: 0 1 100%;
 
     .o-introContent__title {
       align-items: center;
