--- a/resources/styles/src/components/organisms/_o-navigationMenu.scss
+++ b/resources/styles/src/components/organisms/_o-navigationMenu.scss
@@ -132,7 +132,7 @@
 
   .o-navigationMenu__topRow {
     @media(max-width: 600px) {
-      margin-top: 62px;
+      margin-top: 45px;
     }
   }
 
@@ -182,6 +182,7 @@
 
       li {
         a{
+          border-right: none !important;
           display: block;
           width: 100%;
         }
