--- a/resources/styles/src/components/molecules/_m-featureSlider.scss
+++ b/resources/styles/src/components/molecules/_m-featureSlider.scss
@@ -21,12 +21,13 @@
     }
 
     @media(max-width: 768px) {
-      top: 50%;
+      bottom: auto;
+      height: 90%;
       left: 50%;
+      right: auto;
+      top: 50%;
       transform: translate(-50%, -50%);
       width: 95%;
-      right: auto;
-      bottom: auto;
     }
 
     @media(max-width: 700px) {
