--- a/resources/styles/src/components/molecules/_m-footerLink.scss
+++ b/resources/styles/src/components/molecules/_m-footerLink.scss
@@ -51,7 +51,7 @@
     .m-footerLink__label {
       color: $white;
       font-size: 2rem;
-      font-weight: $font-bold;
+      font-weight: $font-semibold;
       line-height: 1;
       margin: 0;
       padding-left: 1rem;
