--- a/resources/styles/src/components/molecules/_m-footerLinks.scss
+++ b/resources/styles/src/components/molecules/_m-footerLinks.scss
@@ -18,7 +18,7 @@
       text-align: center;
 
       a {
-        color: $black;
+        color: #555;
         font-size: 1rem;
         font-weight: $font-semibold;
         letter-spacing: .06rem;
