--- a/resources/styles/src/components/molecules/_m-marketingBlock.scss
+++ b/resources/styles/src/components/molecules/_m-marketingBlock.scss
@@ -5,6 +5,7 @@
   .m-marketingBlock__headline {
     color: $white;
     font-size: 1.5rem;
+    font-weight: $font-semibold;
     line-height: 1.7rem;
     margin: 0;
     padding: 1rem 0 0;
@@ -28,9 +29,11 @@
     width: 60%;
 
     p {
+      font-weight: $font-semibold;
+      margin: 0 0 .5rem;
 
       @media(max-width: 500px) {
-        margin: 0em 5em 5em;
+        margin: 0 5rem .5rem;
       }
     }
 
@@ -51,7 +54,7 @@
 
   .m-marketingBlock__decoration {
     height: 1rem;
-    margin: 1rem 0;
+    margin: 0 0 1rem;
 
     @media(max-width: 1000px) {
       margin: 0;
