--- a/resources/styles/src/components/molecules/_m-navigationRow.scss
+++ b/resources/styles/src/components/molecules/_m-navigationRow.scss
@@ -14,7 +14,7 @@
     @media(max-width: 600px) {
       background-color: #e2e2e2;
       display: flex;
-      height: 35px;
+      height: auto;
       justify-content: center;
       padding: 0;
       width: 100%;
@@ -88,14 +88,38 @@
 #menu-primary li {
   position: relative;
 
-  &:hover ul {
-    background: rgba(255,255,255,.9);
-    display: block;
-    left: 0px;
-    padding: 0px;
-    position: absolute;
-    top: 40px;
-    width: 250px;
+  &:last-child {
+    left: auto;
+    right: 0;
+  }
+
+  &:hover {
+
+    a {
+      background-color: $blue;
+      color: $white;
+    }
+
+    ul {
+      background: rgba(255,255,255,.9);
+      display: block;
+      left: 0px;
+      padding: 0px;
+      position: absolute;
+      top: 40px;
+      width: 250px;
+
+      a {
+        background-color: transparent;
+        color: #1a2a34;
+        padding: .75rem .65rem;
+
+        &:hover {
+          background-color: $blue;
+          color: $white;
+        }
+      }
+    }
   }
 
   ul {
@@ -121,6 +145,14 @@
       -moz-transition: all 0.2s ease-in;
       -o-transition: all 0.2s ease-in;
       transition: all 0.2s ease-in;
+
+      @media(max-width: 900px) {
+        padding: .75rem .45rem;
+      }
+
+      @media(max-width: 600px) {
+        padding: .45rem .5rem;
+      }
     }
   }
 
