--- a/resources/styles/src/components/organisms/_o-callToAction.scss
+++ b/resources/styles/src/components/organisms/_o-callToAction.scss
@@ -17,7 +17,7 @@
 
   .o-callToAction__titleText {
     margin: 0;
-    padding-top: 4rem;
+    padding-top: 2.5rem;
     text-align: center;
     text-transform: uppercase;
 
@@ -30,21 +30,30 @@
     color: $blue;
     font-size: 2.4rem;
     font-weight: $font-semibold;
-    line-height: 2.3rem;
+    line-height: 2.5rem;
     margin: 0 auto;
     max-width: 800px;
     padding: 1rem 0 3rem;
     text-align: center;
     width: 95%;
 
+    @media(max-width: 500px) {
+      font-size: 1.8rem;
+      line-height: 2rem;
+    }
+
     p {
       margin: 0px;
-      line-height: 2.5rem;
     }
 
     span {
       display: block;
-      padding: .6rem;
+      font-size: 3.4rem;
+      padding-top: .5rem;
+
+      @media(max-width: 500px) {
+        font-size: 2.6rem;
+      }
     }
   }
 
