--- a/resources/styles/src/components/organisms/_o-capabilitiesBlock.scss
+++ b/resources/styles/src/components/organisms/_o-capabilitiesBlock.scss
@@ -13,7 +13,14 @@
 
   .o-capabilitiesBlock__topDecoration {
     flex: 0 0 25px;
+    height: 1.5rem;
     margin: 0 -40px 0 40px;
+    width: 1.5rem;
+
+    @media(max-width: 900px) {
+      height: 1.5rem;
+      width: 1.5rem;
+    }
 
     @media(max-width: 600px) {
       margin: 0px;
