--- a/resources/styles/src/components/organisms/_o-capabilityStack.scss
+++ b/resources/styles/src/components/organisms/_o-capabilityStack.scss
@@ -14,7 +14,7 @@
       margin: 0 -40px 0 40px;
 
       @media(max-width: 600px) {
-        margin: 0px;
+        margin: 0 -20px 0 0;
       }
     }
   }
