--- a/resources/styles/src/components/organisms/_o-copyrightContent.scss
+++ b/resources/styles/src/components/organisms/_o-copyrightContent.scss
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 1rem 0;
+  padding: .5rem 0;
   font-size: .8rem;
   width: 100%;
 
@@ -15,11 +15,7 @@
   }
 
   .o-copyrightContent__legal {
-    padding-bottom: .5rem;
-
-    @media(max-width: 768px) {
-      padding: 0;
-    }
+    padding-bottom: 0;
   }
 
   .o-copyrightContent__anchor {
