--- a/resources/styles/src/components/organisms/_o-introContent.scss
+++ b/resources/styles/src/components/organisms/_o-introContent.scss
@@ -45,6 +45,8 @@
       display: flex;
       flex: 0 1 90%;
       justify-content: center;
+      margin: 0 auto;
+      max-width: 1000px;
 
       @media(max-width: 600px) {
         flex-direction: column;
@@ -52,7 +54,14 @@
 
       .o-introContent__decoration {
         flex: 0 0 25px;
+        height: 1.5rem;
         margin: 0 -20px 0 20px;
+        width: 1.5rem;
+
+        @media(max-width: 800px) {
+          height: 1rem;
+          width: 1rem;
+        }
 
         @media(max-width: 600px) {
           margin: 10px 0 0;
