--- a/resources/styles/src/components/organisms/_o-productGrid.scss
+++ b/resources/styles/src/components/organisms/_o-productGrid.scss
@@ -25,7 +25,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  padding-top: 2rem;
+  padding-top: 0;
   justify-content: center;
 
   .o-productGrid__block {
@@ -33,7 +33,7 @@
     line-height: 0px;
     overflow: hidden;
     position: relative;
-    margin-bottom: 25px;
+    margin-bottom: 1rem;
 
     &:after {
       content: '\A';
@@ -57,11 +57,11 @@
     }
 
     @media(max-width: 800px) {
-      flex: 0 1 50%;
+      flex: 0 1 45%;
     }
 
     @media(max-width: 600px) {
-      flex: 0 1 100%;
+      flex: 0 1 95%;
     }
 
     &:hover img {
