--- a/resources/styles/src/components/organisms/_o-supplementaryContent.scss
+++ b/resources/styles/src/components/organisms/_o-supplementaryContent.scss
@@ -6,10 +6,6 @@
   margin: 0 auto;
   width: 90%;
 
-  @media(min-width: 640px) {
-    width: 90%;
-  }
-
   .o-supplementaryContent__title {
     align-items: center;
     display: flex;
@@ -23,7 +19,14 @@
 
     .o-supplementaryContent__topDecoration {
       flex: 0 0 25px;
+      height: 1.5rem;
       margin: 0 -40px 0 40px;
+      width: 1.5rem;
+
+      @media(max-width: 800px) {
+        height: 1rem;
+        width: 1rem;
+      }
 
       @media(max-width: 600px) {
         margin: 0px;
@@ -35,7 +38,7 @@
     columns: 1;
     column-gap: 4rem;
     margin: 0 auto;
-    max-width: 1200px;
-    padding: 2rem 0;
+    max-width: 800px;
+    padding: 0;
   }
 }
