--- a/resources/styles/src/components/organisms/_o-videoContent.scss
+++ b/resources/styles/src/components/organisms/_o-videoContent.scss
@@ -3,13 +3,17 @@
   flex-wrap: wrap;
   max-width: 1100px;
   margin: 0 auto;
-  width: 95%;
+  width: 90%;
 
   .o-videoContent__headline {
     align-items: center;
     display: flex;
     flex: 0 1 95%;
     justify-content: center;
+
+    @media(max-width: 600px) {
+      padding: 0 0 1rem;
+    }
 
     .o-videoContent__topDecoration {
       flex: 0 0 25px;
