--- a/resources/styles/src/components/pages/_history.scss
+++ b/resources/styles/src/components/pages/_history.scss
@@ -16,6 +16,12 @@
   }
 }
 
+.history__timeline {
+  margin: 0 auto;
+  max-width: 1100px;
+  padding: 0 5%;
+}
+
 .cd-container {
   .cd-timeline-img {
     background: #010066 !important;
