--- a/resources/styles/src/components/pages/_homepage.scss
+++ b/resources/styles/src/components/pages/_homepage.scss
@@ -18,14 +18,18 @@
 
       .m-industrySlider__topDecoration {
         flex: 0 0 25px;
+        height: 1.5rem;
         margin: 0 -40px 0 40px;
+        width: 1.5rem;
 
         path {
           width: 100%;
         }
 
         @media(max-width: 600px) {
-          margin: 0px;
+          height: 1rem;
+          margin: 0 -10px 0 20px;
+          width: 1rem;
         }
       }
     }
@@ -54,34 +58,16 @@
 }
 
 .slick-prev {
-  left: 8px !important;
-
-  @media(max-width: 768px) {
-    left: 0px !important;
-    bottom: 0px !important;
-  }
+  left: 0 !important;
+  bottom: 0px !important;
 }
 
 .slick-next {
-  right: 8px !important;
-
-  @media(max-width: 768px) {
-    right: 0px !important;
-    bottom: 0px !important;
-  }
+  right: 0 !important;
+  bottom: 0px !important;
 }
 
 #marketingBlocks {
   background-image: url("../../../resources/images/src/jpg/home-marketing-blocks.jpg");
   background-size: cover;
-}
-#callToAction {
-  margin: 0 auto;
-  max-width: 1300px;
-  width: 100%;
-}
-#footerLinks {
-  margin: 0 auto;
-  max-width: 1300px;
-  width: 100%;
 }
