--- a/resources/styles/src/components/pages/_solutionLanding.scss
+++ b/resources/styles/src/components/pages/_solutionLanding.scss
@@ -31,13 +31,14 @@
   width: 95%;
 
   @media(max-width: 640px) {
+    display: none;
     width: 100%;
   }
 }
 
 .solutionLanding__bodyContent {
   margin: 0 auto;
-  max-width: 1000px;
+  max-width: 800px;
   padding: 1.5rem 0px;
   width: 90%;
 
@@ -110,7 +111,7 @@
 
 .solutionLanding__productGrid {
   margin: 0 auto;
-  max-width: 1300px;
+  max-width: 1100px;
   width: 95%;
 
   @media(max-width: 900px) {
