--- a/resources/styles/src/settings/_colors.scss
+++ b/resources/styles/src/settings/_colors.scss
@@ -23,7 +23,7 @@ $blue: rgba(1, 0, 102, 1);
 $light-blue: rgba(0, 153, 255, 1);
 $yellow: rgba(243, 222, 44, 1);
 $red: rgba(255, 51, 0, 1);
-$black: rgba(26, 42, 52, 1);
+$black: #000;
 $black-80: rgba(26, 42, 52, .8);
 $grey: rgba(226, 226, 226, 1);
 $white: rgba(255, 255, 255, 1);
