--- a/resources/styles/src/components/molecules/_m-capabilitiesBlock.scss
+++ b/resources/styles/src/components/molecules/_m-capabilitiesBlock.scss
@@ -15,7 +15,7 @@
 
   .m-capabilitiesBlock__textBlock {
     flex: 0 1 100%;
-    padding: 0px 4rem;
+    padding: 0 4rem 1.5rem;
 
     .m-capabilitiesBlock__headline {
 
