--- a/resources/styles/src/components/molecules/_m-navigationRow.scss
+++ b/resources/styles/src/components/molecules/_m-navigationRow.scss
@@ -89,8 +89,11 @@
   position: relative;
 
   &:last-child {
-    left: auto;
-    right: 0;
+
+    ul {
+      left: auto;
+      right: 0;
+    }
   }
 
   &:hover {
