--- a/resources/styles/src/components/molecules/_m-searchFields.scss
+++ b/resources/styles/src/components/molecules/_m-searchFields.scss
@@ -1,6 +1,6 @@
 .m-search-field {
     background-color: transparent;
-    background-image: url(../../images/src/search-icon.png);
+    background-image: url(../../images/src/search-icon.gif);
     background-position: 0px center;
     background-repeat: no-repeat;
     background-size: 24px 24px;
