--- a/resources/styles/src/components/pages/_homepage.scss
+++ b/resources/styles/src/components/pages/_homepage.scss
@@ -68,6 +68,6 @@
 }
 
 #marketingBlocks {
-  background-image: url("../../../resources/images/src/jpg/home-marketing-blocks.jpg");
+  background-image: url("../../../resources/images/src/jpg/home-marketing-blocks.png");
   background-size: cover;
 }
