--- a/resources/styles/src/components/atoms/_a-blockLabel.scss
+++ b/resources/styles/src/components/atoms/_a-blockLabel.scss
@@ -19,8 +19,14 @@
     position: absolute;
     right: 0;
     top: 0;
-    width: 1.6rem;
+    width: 1.5rem;
+    height: 1.5rem;
     z-index: 2;
+
+    @media(max-width: 600px) {
+      width: 1.1rem;
+      height: 1.1rem;
+    }
 
     &.a-blockLabel__flag--reverse {
       left: 0;
