--- a/resources/styles/src/components/atoms/_a-linkBlockLabel.scss
+++ b/resources/styles/src/components/atoms/_a-linkBlockLabel.scss
@@ -11,18 +11,20 @@
     align-items: center;
     color: #fff;
     display: flex;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
+    font-weight: $font-semibold;
     flex: 0 1 100%;
     height: 100%;
     margin: 0px;
-    padding: 1rem;
+    padding: .5rem 1rem;
     position: relative;
 
     .a-linkBlockLabel__flag {
       position: absolute;
       right: 0px;
       top: 0px;
-      width: 1.6rem;
+      width: 1rem;
+      height: 1rem;
     }
   }
 }
