--- a/resources/styles/src/components/atoms/_a-rowLabel.scss
+++ b/resources/styles/src/components/atoms/_a-rowLabel.scss
@@ -11,6 +11,10 @@
     padding: 1rem 1rem 1rem 2rem;
     width: 95%;
     font-weight: $font-semibold;
+
+    @media(max-width: 500px) {
+      padding: 0 1rem;
+    }
   }
 
   .a-rowLabel__flag {
@@ -20,5 +24,10 @@
     right: 0;
     top: 0;
     width: 4%;
+
+    @media(max-width: 780px) {
+      width: 1rem;
+      height: 1rem;
+    }
   }
 }
