--- a/resources/styles/src/components/molecules/_m-capabilityRow.scss
+++ b/resources/styles/src/components/molecules/_m-capabilityRow.scss
@@ -52,5 +52,10 @@
     @media(max-width: 780px) {
       width: 90%;
     }
+
+    @media(max-width: 500px) {
+      padding: .5rem 1rem .5rem 1.5rem;
+      width: 100%;
+    }
   }
 }
