--- a/resources/styles/src/components/molecules/_m-ctaCard.scss
+++ b/resources/styles/src/components/molecules/_m-ctaCard.scss
@@ -5,14 +5,24 @@
   margin: 5%;
   max-width: 460px;
 
+  @media(max-width: 600px) {
+    margin: 0;
+  }
+
   .m-ctaCard__heading {
     font-size: 2rem;
     font-weight: $font-semibold;
-    margin: 0;
+    margin: 2%;
   }
 
   .m-ctaCard__description {
     padding: 1rem 0;
+
+    p {
+      @media(max-width: 700px) {
+        margin: 0;
+      }
+    }
   }
 
   .m-ctaCard__row {
