--- a/resources/styles/src/components/molecules/_m-featureSlider.scss
+++ b/resources/styles/src/components/molecules/_m-featureSlider.scss
@@ -35,7 +35,8 @@
     }
 
     @media(max-width: 500px) {
-      width: 95%;
+      width: 100%;
+      height: 100%;
     }
 
     h3.m-featureSlider__title {
