--- a/resources/styles/src/components/organisms/_o-capabilitiesBlock.scss
+++ b/resources/styles/src/components/organisms/_o-capabilitiesBlock.scss
@@ -35,7 +35,7 @@
 
 .o-capabilitiesSlider__wrapper {
   background: linear-gradient(135deg, rgba(0,0,0,.8), rgba(0,0,152,.8), rgba(0,0,0,.8));
-  padding: 0rem 0rem 2rem;
+  padding: 0;
   position: absolute;
   right: 8px;
   top: 1rem;
