--- a/resources/styles/src/elements/_content-sectioning.scss
+++ b/resources/styles/src/elements/_content-sectioning.scss
@@ -89,13 +89,13 @@ h1.o-introContent__title {
  h2.a-rowLabel__title,
  h2.a-blockLabel__title,
  h3.m-industrySlider__title {
-  font-size: 2rem;
+  font-size: 1.8rem;
   line-height: 1;
   margin: 0px;
-  padding: 1rem;
+  padding: .75rem 1rem;
 
   @media(max-width: 640px) {
-    font-size: 2rem;
+    font-size: 1.6rem;
   }
 
   @media(max-width: 600px) {
@@ -106,18 +106,26 @@ h1.o-introContent__title {
 
  h3,
  h3.m-sidebarTitle__text,
- .m-sidebarTitle {
+ .m-sidebarTitle,
+ .o-supplementaryContent__paragraph h2,
+ .o-supplementaryContent__paragraph h3,
+ .o-bodyContent--general h2 {
   color: $blue;
   font-size: 2rem;
   font-weight: $font-semibold;
   line-height: 2rem;
   margin: 1rem 0 .5rem;
+
+  @media(max-width: 640px) {
+    font-size: 1.6rem;
+    line-height: 1.8rem;
+  }
  }
 
  h3.m-footerLink__title,
  h3.o-categoryLinks__title {
-  font-size: 1.5rem;
-  padding: .5rem 1rem;
+  font-size: 1.4rem;
+  padding: .25rem .75rem;
   width: auto;
  }
 
