--- a/resources/styles/src/components/molecules/_m-navigationRow.scss
+++ b/resources/styles/src/components/molecules/_m-navigationRow.scss
@@ -91,7 +91,7 @@
   &:last-child {
 
     ul {
-      left: auto;
+      left: auto !important;
       right: 0;
     }
   }
@@ -201,6 +201,10 @@
 
         li {
           border-bottom: 1px solid #fff;
+
+          &:last-child {
+            border-bottom: none;
+          }
         }
       }
     }
